--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 FLASK_APP=app/app.py
 FLASK_ENV=development
-DATABASE_URL=mysql+pymysql://root:1234@localhost/flaskcar
+DATABASE_URL=mysql+pymysql://root:1234@mysql:3306/flaskcar
+DB_HOST=localhost
+DB_PORT=3307
 JWT_SECRET_KEY=K8v2P9x4mN3qL7tR5wJ1yA6cF0hB4uE9
 JWT_ACCESS_TOKEN_EXPIRES=1800
-CELERY_BROKER_URL=redis://localhost:6379/0
-CELERY_RESULT_BACKEND=redis://localhost:6379/0
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
