--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,27 @@
-Flask==3.0.3
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.5
-Flask-JWT-Extended==4.6.0
-python-dotenv==1.0.1
-marshmallow==3.21.1
-bcrypt==4.1.2
-requests==2.28.1
+# FastAPI & Server
+fastapi>=0.111.0
+uvicorn[standard]>=0.30.0
+
+# Database (SQLAlchemy Async + MySQL driver + ORM)
+sqlalchemy[asyncio]>=2.0.30
+asyncmy>=0.2.9
 PyMySQL==1.1.0
-celery==5.3.6
-redis==5.0.3
-cryptography
-flask-smorest
+alembic>=1.13.1   
+
+# Security & Auth
+python-jose>=3.3.0       
+passlib[bcrypt]>=1.7.4   
+werkzeug>=3.0.3  
+PyJWT==2.10.1
+
+
+# Celery & Redis
+celery>=5.3.6
+redis>=5.0.4
+
+# Pydantic 
+pydantic>=2.7.0
+pydantic-settings>=2.2.1
+
+# HTTP client
+requests==2.28.1
