--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,30 @@
-# FastAPI & Server
-fastapi>=0.111.0
-uvicorn[standard]>=0.30.0
+# FastAPI and ASGI
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
 
-# Database (SQLAlchemy Async + MySQL driver + ORM)
-sqlalchemy[asyncio]>=2.0.30
-asyncmy>=0.2.9
-PyMySQL==1.1.0
-alembic>=1.13.1   
+# Database
+sqlalchemy==2.0.23
+asyncmy==0.2.9
+pymysql==1.1.0
+alembic==1.12.1
 
-# Security & Auth
-python-jose>=3.3.0       
-passlib[bcrypt]>=1.7.4   
-werkzeug>=3.0.3  
-PyJWT==2.10.1
+# Authentication
+pyjwt==2.8.0
+werkzeug==3.0.1
+python-multipart==0.0.6
 
+# Async and Celery
+celery==5.3.4
+redis==5.0.1
 
-# Celery & Redis
-celery>=5.3.6
-redis>=5.0.4
+# HTTP requests
+requests==2.31.0
+httpx==0.25.2
 
-# Pydantic 
-pydantic>=2.7.0
-pydantic-settings>=2.2.1
+# Configuration
+pydantic==2.5.0
+pydantic-settings==2.1.0
+python-dotenv==1.0.0
 
-# HTTP client
-requests==2.28.1
+# CORS
+python-jose[cryptography]==3.3.0
