--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,10 @@ services:
     env_file:
       - .env
     depends_on:
-      - redis
-      - mysql
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     volumes:
       - .:/backendflask
     networks:
@@ -41,8 +43,10 @@ services:
     env_file:
       - .env
     depends_on:
-      - redis
-      - mysql
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     volumes:
       - .:/backendflask
     networks:
