--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
 services:
-  flask:
+  fastapi:
     build:
       context: .
-    container_name: flask-app
+    container_name: fastapi-app
     command: ./scripts/entrypoint.sh
     ports:
-      - "5000:5000"
+      - "8000:8000"
     env_file:
       - .env
     depends_on:
-      - mysql
-      - redis
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     volumes:
       - .:/backendflask
-    environment:
-      FLASK_APP: app/app.py
     networks:
-      - flask-network
+      - fast-network
 
   celery_worker:
     build:
@@ -26,12 +26,14 @@ services:
     env_file:
       - .env
     depends_on:
-      - redis
-      - mysql
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     volumes:
       - .:/backendflask
     networks:
-      - flask-network
+      - fast-network
 
   celery_beat:
     build:
@@ -41,20 +43,28 @@ services:
     env_file:
       - .env
     depends_on:
-      - redis
-      - mysql
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     volumes:
       - .:/backendflask
     networks:
-      - flask-network
+      - fast-network
 
   redis:
     image: redis:7-alpine
     container_name: redis
     ports:
       - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 30s
+      retries: 5
+      start_period: 30s
     networks:
-      - flask-network
+      - fast-network
 
   mysql:
     image: mysql:8
@@ -62,17 +72,23 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_DATABASE: flaskcar
-    # ports:
-    #   - "3307:3306"
+      MYSQL_DATABASE: fastcar
+    ports:
+      - "3307:3306"
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-p1234"]
+      interval: 5s
+      timeout: 30s
+      retries: 5
+      start_period: 30s
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
-      - flask-network
+      - fast-network
 
 volumes:
   mysql_data:
 
 networks:
-  flask-network:
+  fast-network:
     driver: bridge
