--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,30 @@
-Flask==3.0.3
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.5
-Flask-JWT-Extended==4.6.0
-python-dotenv==1.0.1
-marshmallow==3.21.1
-bcrypt==4.1.2
-requests==2.28.1
-PyMySQL==1.1.0
-celery==5.3.6
-redis==5.0.3
-cryptography
-flask-smorest
+# FastAPI and ASGI
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+
+# Database
+sqlalchemy==2.0.23
+asyncmy==0.2.9
+pymysql==1.1.0
+alembic==1.12.1
+
+# Authentication
+pyjwt==2.8.0
+werkzeug==3.0.1
+python-multipart==0.0.6
+
+# Async and Celery
+celery==5.3.4
+redis==5.0.1
+
+# HTTP requests
+requests==2.31.0
+httpx==0.25.2
+
+# Configuration
+pydantic==2.5.0
+pydantic-settings==2.1.0
+python-dotenv==1.0.0
+
+# CORS
+python-jose[cryptography]==3.3.0
